--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.15.1",
     "next": "^15.3.2",
-    "next-auth": "^4.24.6",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
